--- a/WebTestApp/WebTestApp.csproj
+++ b/WebTestApp/WebTestApp.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200302135326_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200302135326_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200302200034_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200302200034_InitialCreate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
