--- a/WebTestApp/WebTestApp.csproj
+++ b/WebTestApp/WebTestApp.csproj
@@ -9,6 +9,10 @@
     <Compile Remove="Migrations\20200302135326_InitialCreate.Designer.cs" />
     <Compile Remove="Migrations\20200302200034_InitialCreate.cs" />
     <Compile Remove="Migrations\20200302200034_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200302201015_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200302201015_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200303093818_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200303093818_InitialCreate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
